<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="16dp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        tools:context=".MainActivity"
        >


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:text="@string/btn_log"
            android:textStyle="bold"
            android:textSize="25sp"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/textView11"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </com.google.android.material.textview.MaterialTextView>

        <ImageView
            android:layout_width="250dp"
            android:layout_height="180dp"
            android:src="@drawable/compra2"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter"
            android:layout_marginTop="16dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/User"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconDrawable="@drawable/ic_logged"
            android:layout_marginTop="16dp"
            android:hint="@string/user"
            android:textSize="15sp"
            app:boxCornerRadiusTopStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusBottomEnd="15dp"
            android:textColorHint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textColorHint="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="16dp"
            android:hint="@string/pass"
            android:textSize="15sp"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_lock"
            app:boxCornerRadiusTopStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusBottomEnd="15dp"
            android:textColorHint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textColorHint="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgot_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_pass"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            >
        </TextView>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/btn_log"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/account"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:padding="10dp"
            android:layout_marginTop="80dp"
            />

        <TextView
            android:id="@+id/txvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:padding="15dp"
            />




        <!--app:helperText="Requiered" TEXTO DE AYUDA -->
        <!--app:counterEnabled="true"
        app:counterMaxLength="4" después de los caracteres
        seleccionados se pone en rojo el input-->
    </LinearLayout>

</ScrollView>