<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        tools:context=".fragments.ArticleFragment1">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue_500"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="16dp"
            app:cardCornerRadius="10sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/welcome"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/welcome"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/welcomedesc"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="150dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center_horizontal">

                    <!--<ImageView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:src="@drawable/compra2"
                        android:contentDescription="@string/app_name"
                        android:scaleType="fitCenter"
                        android:layout_marginTop="16dp"/>-->

                    <TextView
                        android:id="@+id/card1"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:text="Articulos electronicos"
                        android:textAlignment="center">
                    </TextView>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card2"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center_horizontal">

                    <!--<ImageView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:src="@drawable/compra2"
                        android:contentDescription="@string/app_name"
                        android:scaleType="fitCenter"
                        android:layout_marginTop="16dp"/>-->

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:text="Alimentos y Bebidas"
                        android:textAlignment="center">
                    </TextView>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center_horizontal">

                    <!--<ImageView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:src="@drawable/compra2"
                        android:contentDescription="@string/app_name"
                        android:scaleType="fitCenter"
                        android:layout_marginTop="16dp"/>-->

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:text="Oficina y equipo de computo"
                        android:textAlignment="center">
                    </TextView>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center_horizontal">

                    <!--<ImageView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:src="@drawable/compra2"
                        android:contentDescription="@string/app_name"
                        android:scaleType="fitCenter"
                        android:layout_marginTop="16dp"/>-->

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:text="Herramientas"
                        android:textAlignment="center">
                    </TextView>

                </com.google.android.material.card.MaterialCardView>


            </LinearLayout>

        </HorizontalScrollView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/collectibles"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rArticle1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".6"></androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/equipoC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/section_one"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rArticle2"
            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:layout_weight=".3"></androidx.recyclerview.widget.RecyclerView>


        <!--<androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rArticle3"
            android:layout_weight="0.45"
            android:layout_width="match_parent"
            android:layout_height="0dp">
        </androidx.recyclerview.widget.RecyclerView>-->

    </LinearLayout>

</ScrollView>

